# word_filter

./: .gitignore  .travis.yml  Cargo.toml  README.md  build.rs
.github/workflows/: test.yml
benches/: builder.rs  censor.rs
benches/data/: alias_sources.csv  aliases.csv  exceptions.csv  input.txt  separators.csv  words.csv
doc/: remove_root_macros.html  remove_root_modules.html
old_src/: lib.rs  node.rs  old_lib.rs
src/: builder.rs  censor.rs  constants.rs  lib.rs  node.rs  old_lib.rs  old_walker.rs  pda.rs  pointer.rs  utils.rs  walker.rs
src/codegen/: mod.rs  pda.rs  state.rs
tests/: integration.rs  trybuild.rs
tests/integration_codegen/: Cargo.toml  build.rs
word_filter_codegen/: Cargo.toml  README.md  build.rs
word_filter_codegen/src/: flags.rs  lib.rs  node.rs  pda.rs  state.rs  type.rs
word_filter_codegen/test/: Cargo.toml  build.rs
word_filter_codegen/test/src/: lib.rs
word_filter_codegen/tests/: trybuild.rs
