[package]
name = "word_filter"
version = "0.4.0"
authors = ["Anders Evensen"]
edition = "2018"
description = "A Word Filter for filtering text."
readme = "README.md"
repository = "https://github.com/Anders429/word_filter"
license = "MIT OR Apache-2.0"
categories = ["data-structures", "game-development", "no-std", "text-processing", "value-formatting"]
keywords = ["wordfilter", "word", "filter", "censor", "string"]
exclude = [".github/*", "clippy.toml", "benches"]

[package.metadata.docs.rs]
rustdoc-args = ["--html-after-content", "doc/remove_root_module.html"]

[dependencies]
by_address = "1.0.4"
criterion = {version = "0.3.4", optional = true}
hashbrown = "0.9.1"
nested_containment_list = "0.3.0"
new_debug_unreachable = "1.0.4"
str_overlap = "0.4.3"
unicode-segmentation = "1.7.1"

[dev-dependencies]
claim = "0.5.0"
csv = "1.1.6"

[[bench]]
name = "builder"
harness = false

[[bench]]
name = "censor"
harness = false
