[package]
name = "word_filter"
version = "0.6.0"
authors = ["Anders Evensen"]
edition = "2018"
description = "A Word Filter for filtering text."
readme = "README.md"
repository = "https://github.com/Anders429/word_filter"
license = "MIT OR Apache-2.0"
categories = ["data-structures", "game-development", "no-std", "text-processing", "value-formatting"]
keywords = ["wordfilter", "word", "filter", "censor", "string"]
include = ["/src/**/*", "/doc/**/*", "/LICENSE-*", "/build.rs", "/README.md"]

[package.metadata.docs.rs]
rustdoc-args = ["--html-after-content", "doc/remove_root_modules.html"]

[workspace]
members = ["word_filter_codegen"]

[dependencies]
by_address = "1.0.4"
hashbrown = "0.11.2"
nested_containment_list = "0.3.0"
new_debug_unreachable = "1.0.4"
unicode-segmentation = "1.7.1"

[dev-dependencies]
claim = "0.5.0"
integration_codegen = {path = "tests/integration_codegen"}
