[package]
name = "word_filter"
version = "0.8.1"
authors = ["Anders Evensen"]
edition = "2018"
description = "A Word Filter for filtering text."
readme = "README.md"
repository = "https://github.com/Anders429/word_filter"
license = "MIT OR Apache-2.0"
categories = ["data-structures", "game-development", "no-std", "text-processing", "value-formatting"]
keywords = ["wordfilter", "word", "filter", "censor", "string"]
include = ["/src/**/*", "/doc/**/*", "/LICENSE-*", "/build.rs", "/README.md"]

[package.metadata.docs.rs]
rustdoc-args = ["--html-after-content", "doc/remove_root_macros.html"]

[dependencies]
bitflags = "1.3.2"
by_address = "1.0.4"
const_fn_assert = "0.1.2"
hashbrown = "0.12.2"
nested_containment_list = "0.3.0"
new_debug_unreachable = "1.0.4"
str_overlap = "0.4.3"
unicode-segmentation = "1.8.0"

[dev-dependencies]
indoc = "1.0.3"
integration_codegen = {path = "tests/integration_codegen"}
trybuild = "1.0.45"
