[package]
name = "word_filter_codegen"
version = "0.5.0"
authors = ["Anders Evensen"]
edition = "2018"
description = "A Word Filter for filtering text."
readme = "README.md"
repository = "https://github.com/Anders429/word_filter"
license = "MIT OR Apache-2.0"
categories = ["data-structures", "game-development", "no-std", "text-processing", "value-formatting"]
keywords = ["wordfilter", "word", "filter", "censor", "string"]
exclude = [".github/*", "clippy.toml"]

[dependencies]
hashbrown = "0.11.2"
new_debug_unreachable = "1.0.4"
str_overlap = "0.4.3"
unicode-segmentation = "1.7.1"

[dev-dependencies]
trybuild = "1.0.42"
word_filter = {path = ".."}
