[package]
name = "word_filter_codegen"
version = "0.6.0"
authors = ["Anders Evensen"]
edition = "2018"
description = "Utilities for generating `WordFilter`s at compile-time."
readme = "README.md"
repository = "https://github.com/Anders429/word_filter"
license = "MIT OR Apache-2.0"
categories = ["development-tools::build-utils", "game-development", "no-std", "text-processing", "value-formatting"]
keywords = ["wordfilter", "word", "filter", "censor", "string"]
include = ["/src/**/*", "/LICENSE-*", "/build.rs", "/README.md"]

[dependencies]
new_debug_unreachable = "1.0.4"
str_overlap = "0.4.3"
unicode-segmentation = "1.7.1"

[dev-dependencies]
indoc = "1.0.3"
trybuild = "1.0.42"
word_filter = {path = ".."}
